--- a/website/src/pages/docs/caching/advanced-topics.mdx
+++ b/website/src/pages/docs/caching/advanced-topics.mdx
@@ -1,6 +1,9 @@
 ---
-description: Learn how to use Apollo Client to manipulate the cache directly for maximum control. Bypass the cache, update after mutation, use refetchQueries and fetchMore, and get full control with update.
+description:
+  Learn how to use Apollo Client to manipulate the cache directly for maximum control. Bypass the
+  cache, update after mutation, use refetchQueries and fetchMore, and get full control with update.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Advanced Topics on Caching
