--- a/website/src/pages/docs/caching/garbage-collection.mdx
+++ b/website/src/pages/docs/caching/garbage-collection.mdx
@@ -1,6 +1,9 @@
 ---
-description: Learn how to manage cached data in Apollo Client 3 with garbage collection and cache eviction strategies, and gain fine-grained control with the evict method. Read more on the documentation.
+description:
+  Learn how to manage cached data in Apollo Client 3 with garbage collection and cache eviction
+  strategies, and gain fine-grained control with the evict method. Read more on the documentation.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Garbage Collection and Cache Eviction
