--- a/website/src/pages/docs/data/mutations.mdx
+++ b/website/src/pages/docs/data/mutations.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to update data using the Apollo `mutate` in GraphQL mutations. Code examples in Angular and explanations on Optimistic UI.
+description:
+  Learn how to update data using the Apollo `mutate` in GraphQL mutations. Code examples in Angular
+  and explanations on Optimistic UI.
 ---
 
 import { Callout } from '@theguild/components';
