--- a/website/src/pages/docs/data/subscriptions.mdx
+++ b/website/src/pages/docs/data/subscriptions.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to set up GraphQL subscriptions to receive real-time notifications from the server, using the GraphQL subscription type.
+description:
+  Learn how to set up GraphQL subscriptions to receive real-time notifications from the server,
+  using the GraphQL subscription type.
 ---
 
 import { Callout } from '@theguild/components';
