--- a/website/src/pages/docs/development-and-testing/developer-tools.mdx
+++ b/website/src/pages/docs/development-and-testing/developer-tools.mdx
@@ -1,5 +1,7 @@
 ---
-description: Discover essential developer tools for Apollo Angular including GraphQL Inspector, GraphQL Codegen, and more. Improve and maintain your GraphQL API with these powerful tools.
+description:
+  Discover essential developer tools for Apollo Angular including GraphQL Inspector, GraphQL
+  Codegen, and more. Improve and maintain your GraphQL API with these powerful tools.
 ---
 
 # Developer Tools
@@ -51,9 +53,9 @@ npm i -D @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
 
 ## GraphQL ESLint
 
-[GraphQL ESLint](https://github.com/B2o5T/graphql-eslint) is a parser, plugin and set rules
-for GraphQL (for schema and operations). Easily customizable with custom rules. Integrates with IDEs
-and modern GraphQL tools.
+[GraphQL ESLint](https://github.com/B2o5T/graphql-eslint) is a parser, plugin and set rules for
+GraphQL (for schema and operations). Easily customizable with custom rules. Integrates with IDEs and
+modern GraphQL tools.
 
 - Integrates with ESLint core (as a ESTree parser).
 - Works on `.graphql` files, `gql` or `graphql` usages and `/* GraphQL */` magic comments.
