--- a/website/src/pages/docs/development-and-testing/testing.mdx
+++ b/website/src/pages/docs/development-and-testing/testing.mdx
@@ -1,5 +1,8 @@
 ---
-description: Learn how to test apollo-angular code using Jest with ApolloTestingModule. It allows for easy mocking of calls to the GraphQL endpoint, so tests can run in isolation and produce consistent results.
+description:
+  Learn how to test apollo-angular code using Jest with ApolloTestingModule. It allows for easy
+  mocking of calls to the GraphQL endpoint, so tests can run in isolation and produce consistent
+  results.
 ---
 
 import { Callout } from '@theguild/components';
