--- a/website/src/pages/docs/get-started.mdx
+++ b/website/src/pages/docs/get-started.mdx
@@ -1,5 +1,7 @@
 ---
-description: Set up Apollo in your Angular app. Learn how to use Apollo Client to fetch, cache, and modify application data.
+description:
+  Set up Apollo in your Angular app. Learn how to use Apollo Client to fetch, cache, and modify
+  application data.
 ---
 
 import { Callout } from '@theguild/components';
