--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -1,5 +1,7 @@
 ---
-description: What is Apollo Angular and what does it do?. Learn how to use Apollo Angular to build your next app.
+description:
+  What is Apollo Angular and what does it do?. Learn how to use Apollo Angular to build your next
+  app.
 ---
 
 # Introduction
