--- a/website/src/pages/docs/local-state/management.mdx
+++ b/website/src/pages/docs/local-state/management.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to manage local state alongside remotely fetched state with Apollo Client, using field policies and reactive variables.
+description:
+  Learn how to manage local state alongside remotely fetched state with Apollo Client, using field
+  policies and reactive variables.
 ---
 
 # Managing Local State
