--- a/website/src/pages/docs/local-state/managing-state-with-field-policies.mdx
+++ b/website/src/pages/docs/local-state/managing-state-with-field-policies.mdx
@@ -1,5 +1,7 @@
 ---
-description: Manage state with custom field policies in Apollo Client queries with local-only fields. Includes examples of storing data in reactive variables or the Apollo Client cache itself.
+description:
+  Manage state with custom field policies in Apollo Client queries with local-only fields. Includes
+  examples of storing data in reactive variables or the Apollo Client cache itself.
 ---
 
 import { Callout } from '@theguild/components';
