--- a/website/src/pages/docs/local-state/reactive-variables.mdx
+++ b/website/src/pages/docs/local-state/reactive-variables.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn about reactive variables in Apollo Client 3, a useful mechanism for storing local state outside the cache. Modify them anywhere & trigger updates in active queries.
+description:
+  Learn about reactive variables in Apollo Client 3, a useful mechanism for storing local state
+  outside the cache. Modify them anywhere & trigger updates in active queries.
 ---
 
 # Reactive Variables
