--- a/website/src/pages/docs/performance/improving-performance.mdx
+++ b/website/src/pages/docs/performance/improving-performance.mdx
@@ -1,5 +1,8 @@
 ---
-description: Learn how to improve your application's performance with Apollo Client! Redirect queries to cached data and use prefetching to load data before it's needed. Read more in the Apollo Client documentation.
+description:
+  Learn how to improve your application's performance with Apollo Client! Redirect queries to cached
+  data and use prefetching to load data before it's needed. Read more in the Apollo Client
+  documentation.
 ---
 
 # Improving Performance
