--- a/website/src/pages/docs/recipes/multiple-clients.mdx
+++ b/website/src/pages/docs/recipes/multiple-clients.mdx
@@ -1,6 +1,9 @@
 ---
-description: Learn to use multiple Apollo clients in your Angular application with @apollo_angular. Create named clients and configure using APOLLO_NAMED_OPTIONS token.
+description:
+  Learn to use multiple Apollo clients in your Angular application with @apollo_angular. Create
+  named clients and configure using APOLLO_NAMED_OPTIONS token.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Multiple Clients
