--- a/website/src/pages/docs/recipes/webpack.mdx
+++ b/website/src/pages/docs/recipes/webpack.mdx
@@ -1,5 +1,7 @@
 ---
-description: How to use the Webpack Loader. Learn how to load GraphQL queries over `.graphql` files using Webpack.
+description:
+  How to use the Webpack Loader. Learn how to load GraphQL queries over `.graphql` files using
+  Webpack.
 ---
 
 # Webpack Loader
