--- a/website/src/pages/v1/basics/local-state.mdx
+++ b/website/src/pages/v1/basics/local-state.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to store your local data in Apollo Angular. You can use the Apollo cache to store local data alongside your remote data.
+description:
+  Learn how to store your local data in Apollo Angular. You can use the Apollo cache to store local
+  data alongside your remote data.
 ---
 
 import { Callout } from '@theguild/components';
