--- a/website/src/pages/v1/basics/mutations.mdx
+++ b/website/src/pages/v1/basics/mutations.mdx
@@ -1,6 +1,8 @@
 ---
-description: This guide will teach you how to use Apollo Client with Angular to build a GraphQL-powered app.
+description:
+  This guide will teach you how to use Apollo Client with Angular to build a GraphQL-powered app.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Mutations
