--- a/website/src/pages/v1/basics/services.mdx
+++ b/website/src/pages/v1/basics/services.mdx
@@ -1,5 +1,6 @@
 ---
-description: Additional API to use GraphQL in Angular. Code generation, Angular Forms integration, and more.
+description:
+  Additional API to use GraphQL in Angular. Code generation, Angular Forms integration, and more.
 ---
 
 import { Callout } from '@theguild/components';
