--- a/website/src/pages/v1/features/caching.mdx
+++ b/website/src/pages/v1/features/caching.mdx
@@ -1,5 +1,7 @@
 ---
-description: Read and write functions for fine-grained cache access. Learn how to use the Apollo Client cache to update your UI.
+description:
+  Read and write functions for fine-grained cache access. Learn how to use the Apollo Client cache
+  to update your UI.
 ---
 
 # Direct Cache Access
