--- a/website/src/pages/v1/features/multiple-clients.mdx
+++ b/website/src/pages/v1/features/multiple-clients.mdx
@@ -1,6 +1,9 @@
 ---
-description: Learn how to use multiple clients in your Angular application. You will learn how to create them and how to use them.
+description:
+  Learn how to use multiple clients in your Angular application. You will learn how to create them
+  and how to use them.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Multiple Clients
