--- a/website/src/pages/v1/features/optimistic-ui.mdx
+++ b/website/src/pages/v1/features/optimistic-ui.mdx
@@ -1,6 +1,9 @@
 ---
-description: Optimistic UI is a pattern that you can use to simulate the results of a mutation and update the UI even before receiving a response from the server.
+description:
+  Optimistic UI is a pattern that you can use to simulate the results of a mutation and update the
+  UI even before receiving a response from the server.
 ---
+
 # Optimistic UI
 
 As explained in the [mutations](../basics/mutations#optimistic-ui) section, optimistic UI is a
