--- a/website/src/pages/v1/features/static-typing.mdx
+++ b/website/src/pages/v1/features/static-typing.mdx
@@ -1,6 +1,9 @@
 ---
-description: Apollo Angular is a community-maintained Angular integration for Apollo Client. It provides a service for using GraphQL in Angular applications.
+description:
+  Apollo Angular is a community-maintained Angular integration for Apollo Client. It provides a
+  service for using GraphQL in Angular applications.
 ---
+
 # Static Typing
 
 As your application grows, you may find it helpful to include a type system to assist in
