--- a/website/src/pages/v1/migration.mdx
+++ b/website/src/pages/v1/migration.mdx
@@ -1,5 +1,7 @@
 ---
-description: Updating your app to Apollo Client 2.0 and Angular Apollo 1.0. This guide will help you migrate from the 1.0 version of Apollo Client and Angular Apollo to the 2.0 version.
+description:
+  Updating your app to Apollo Client 2.0 and Angular Apollo 1.0. This guide will help you migrate
+  from the 1.0 version of Apollo Client and Angular Apollo to the 2.0 version.
 ---
 
 import { Callout } from '@theguild/components';
