--- a/website/src/pages/v1/recipes/authentication.mdx
+++ b/website/src/pages/v1/recipes/authentication.mdx
@@ -1,6 +1,9 @@
 ---
-description: This guide will walk you through the process of setting up Apollo Client in an Angular application.
+description:
+  This guide will walk you through the process of setting up Apollo Client in an Angular
+  application.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Authentication
