--- a/website/src/pages/v1/recipes/boost-migration.mdx
+++ b/website/src/pages/v1/recipes/boost-migration.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to set up Apollo Angular manually without Apollo Angular Boost. This guide will walk you through the process of migrating from Apollo Angular Boost to a manual setup.
+description:
+  Learn how to set up Apollo Angular manually without Apollo Angular Boost. This guide will walk you
+  through the process of migrating from Apollo Angular Boost to a manual setup.
 ---
 
 # Apollo Angular Boost Migration
