--- a/website/src/pages/v1/recipes/meteor.mdx
+++ b/website/src/pages/v1/recipes/meteor.mdx
@@ -1,5 +1,6 @@
 ---
-description: Specifics about using Apollo in your Meteor application. Learn how to use Apollo with Meteor. 
+description:
+  Specifics about using Apollo in your Meteor application. Learn how to use Apollo with Meteor.
 ---
 
 import { Callout } from '@theguild/components';
