--- a/website/src/pages/v1/recipes/pagination.mdx
+++ b/website/src/pages/v1/recipes/pagination.mdx
@@ -1,6 +1,9 @@
 ---
-description: How to use Apollo Client to fetch data from a GraphQL server. Includes a full example of fetching data with Apollo Client.
+description:
+  How to use Apollo Client to fetch data from a GraphQL server. Includes a full example of fetching
+  data with Apollo Client.
 ---
+
 # Pagination
 
 Sometimes, you will have one or more views in your application where you need to display a list that
