--- a/website/src/pages/v1/recipes/prefetching.mdx
+++ b/website/src/pages/v1/recipes/prefetching.mdx
@@ -1,6 +1,9 @@
 ---
-description: How to make your Apollo Client application feel faster. Learn how to use Apollo Client's cache, prefetching, and more to make your application feel faster.
+description:
+  How to make your Apollo Client application feel faster. Learn how to use Apollo Client's cache,
+  prefetching, and more to make your application feel faster.
 ---
+
 # Prefetching Data
 
 One of the easiest ways to make your application's UI feel a lot snappier with Apollo Client is to
