--- a/website/src/pages/v2/caching/interaction.mdx
+++ b/website/src/pages/v2/caching/interaction.mdx
@@ -1,6 +1,9 @@
 ---
-description: A simple Apollo Client example using React Hooks. This example uses the useQuery and useMutation hooks to fetch and update data.
+description:
+  A simple Apollo Client example using React Hooks. This example uses the useQuery and useMutation
+  hooks to fetch and update data.
 ---
+
 # Reading and Writing Data to the Cache
 
 Apollo Client provides three methods for reading and writing data to the cache:
