--- a/website/src/pages/v2/data/error-handling.mdx
+++ b/website/src/pages/v2/data/error-handling.mdx
@@ -1,5 +1,6 @@
 ---
-description: Handling errors with Apollo. Learn how to handle errors in your GraphQL queries and mutations.
+description:
+  Handling errors with Apollo. Learn how to handle errors in your GraphQL queries and mutations.
 ---
 
 # Error Handling
