--- a/website/src/pages/v2/data/fragments.mdx
+++ b/website/src/pages/v2/data/fragments.mdx
@@ -1,6 +1,8 @@
 ---
-description: Learn how to use fragments to share fields between queries, mutations, and subscriptions. 
+description:
+  Learn how to use fragments to share fields between queries, mutations, and subscriptions.
 ---
+
 # Using Fragments
 
 A [GraphQL fragment](http://graphql.org/learn/queries/#fragments) is a shared piece of query logic.
