--- a/website/src/pages/v2/development-and-testing/developer-tools.mdx
+++ b/website/src/pages/v2/development-and-testing/developer-tools.mdx
@@ -51,9 +51,9 @@ npm i @graphql-codegen/cli @graphql-codegen/typescript-apollo-angular
 
 ## GraphQL ESLint
 
-[GraphQL ESLint](https://github.com/B2o5T/graphql-eslint) is a parser, plugin and set rules
-for GraphQL (for schema and operations). Easily customizable with custom rules. Integrates with IDEs
-and modern GraphQL tools.
+[GraphQL ESLint](https://github.com/B2o5T/graphql-eslint) is a parser, plugin and set rules for
+GraphQL (for schema and operations). Easily customizable with custom rules. Integrates with IDEs and
+modern GraphQL tools.
 
 - Integrates with ESLint core (as a ESTree parser).
 - Works on `.graphql` files, `gql` or `graphql` usages and `/* GraphQL */` magic comments.
