--- a/website/src/pages/v2/get-started.mdx
+++ b/website/src/pages/v2/get-started.mdx
@@ -1,5 +1,7 @@
 ---
-description: Set up Apollo in your Angular app, and start fetching data with GraphQL. Learn how to use Apollo Client with Angular to build a simple app.
+description:
+  Set up Apollo in your Angular app, and start fetching data with GraphQL. Learn how to use Apollo
+  Client with Angular to build a simple app.
 ---
 
 import { Callout } from '@theguild/components';
