--- a/website/src/pages/v2/local-state/managing-state-with-field-policies.mdx
+++ b/website/src/pages/v2/local-state/managing-state-with-field-policies.mdx
@@ -1,5 +1,7 @@
 ---
-description: Interacting with local data in Apollo Client. Learn how to store local state in reactive variables or the cache, and how to query local-only fields.
+description:
+  Interacting with local data in Apollo Client. Learn how to store local state in reactive variables
+  or the cache, and how to query local-only fields.
 ---
 
 import { Callout } from '@theguild/components';
