--- a/website/src/pages/v2/performance/improving-performance.mdx
+++ b/website/src/pages/v2/performance/improving-performance.mdx
@@ -1,6 +1,9 @@
 ---
-description: How to make your Apollo Client application feel faster. Learn how to improve performance by using the cache, prefetching data, and more.
+description:
+  How to make your Apollo Client application feel faster. Learn how to improve performance by using
+  the cache, prefetching data, and more.
 ---
+
 # Improving Performance
 
 ## Redirecting to Cached Data
