--- a/website/src/pages/v2/recipes/automatic-persisted-queries.mdx
+++ b/website/src/pages/v2/recipes/automatic-persisted-queries.mdx
@@ -1,5 +1,7 @@
 ---
-description: Automatic Persisted Queries for Apollo Angular. Improve GraphQL performance with Automatic Persisted Queries.
+description:
+  Automatic Persisted Queries for Apollo Angular. Improve GraphQL performance with Automatic
+  Persisted Queries.
 ---
 
 # Automatic Persisted Queries
