--- a/website/src/pages/docs/caching/configuration.mdx
+++ b/website/src/pages/docs/caching/configuration.mdx
@@ -1,6 +1,9 @@
 ---
-description: Optimize GraphQL query performance with Apollo Client Cache. Learn to configure cache setup and customize cache behavior with InMemoryCache constructor and configuration options.
+description:
+  Optimize GraphQL query performance with Apollo Client Cache. Learn to configure cache setup and
+  customize cache behavior with InMemoryCache constructor and configuration options.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Configuring the Cache
