--- a/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
+++ b/website/src/pages/docs/development-and-testing/client-schema-mocking.mdx
@@ -1,5 +1,7 @@
 ---
-description: Learn how to use client schemas to add a new field to an existing type in your schema using mock data, with Apollo Client and GraphQL queries.
+description:
+  Learn how to use client schemas to add a new field to an existing type in your schema using mock
+  data, with Apollo Client and GraphQL queries.
 ---
 
 # Mocking New Schema Capabilities
