--- a/website/src/pages/docs/development-and-testing/using-typescript.mdx
+++ b/website/src/pages/docs/development-and-testing/using-typescript.mdx
@@ -1,5 +1,9 @@
 ---
-description: Learn how to use TypeScript with Apollo to create a strongly-typed GraphQL API in your Angular app. Type definitions can improve development, and Apollo supports this with definitions for @apollo/client and apollo-angular. Explore how to type results and variables in your queries and see how it can improve your application and developer experience.
+description:
+  Learn how to use TypeScript with Apollo to create a strongly-typed GraphQL API in your Angular
+  app. Type definitions can improve development, and Apollo supports this with definitions for
+  @apollo/client and apollo-angular. Explore how to type results and variables in your queries and
+  see how it can improve your application and developer experience.
 ---
 
 # TypeScript
