--- a/website/src/pages/v1/guides/tools-and-packages.mdx
+++ b/website/src/pages/v1/guides/tools-and-packages.mdx
@@ -1,5 +1,6 @@
 ---
-description: List of tools and packages for Apollo Angular. Learn how to use them and how to create your own.
+description:
+  List of tools and packages for Apollo Angular. Learn how to use them and how to create your own.
 ---
 
 # Tools and Packages
