--- a/website/src/pages/v2/index.mdx
+++ b/website/src/pages/v2/index.mdx
@@ -1,5 +1,7 @@
 ---
-description: What is Apollo Angular and what does it do?. Learn how to use Apollo Angular to build a GraphQL client.
+description:
+  What is Apollo Angular and what does it do?. Learn how to use Apollo Angular to build a GraphQL
+  client.
 ---
 
 # Introduction
