--- a/website/src/pages/v2/migration.mdx
+++ b/website/src/pages/v2/migration.mdx
@@ -1,5 +1,7 @@
 ---
-description: Updating your app to Angular Apollo 2.0 and Apollo Client 3.0. Learn how to migrate your app to the new version.
+description:
+  Updating your app to Angular Apollo 2.0 and Apollo Client 3.0. Learn how to migrate your app to
+  the new version.
 ---
 
 import { Callout, Tab, Tabs } from '@theguild/components';
