--- a/website/src/pages/v2/recipes/nativescript.mdx
+++ b/website/src/pages/v2/recipes/nativescript.mdx
@@ -1,6 +1,9 @@
 ---
-description: Using Apollo with NativeScript. Learn how to use Apollo with NativeScript. You can use Apollo with NativeScript exactly as you would with normal Angular application.
+description:
+  Using Apollo with NativeScript. Learn how to use Apollo with NativeScript. You can use Apollo with
+  NativeScript exactly as you would with normal Angular application.
 ---
+
 import { Callout } from '@theguild/components';
 
 # Integrating with NativeScript
