--- a/website/src/pages/v2/recipes/simple-example.mdx
+++ b/website/src/pages/v2/recipes/simple-example.mdx
@@ -1,5 +1,7 @@
 ---
-description: This a very simple example of an Apollo Application that uses Angular. You can see GraphQL in action, combined with the concepts explained in this guide.
+description:
+  This a very simple example of an Apollo Application that uses Angular. You can see GraphQL in
+  action, combined with the concepts explained in this guide.
 ---
 
 # Simple Example
