--- a/website/src/pages/docs/get-started.mdx
+++ b/website/src/pages/docs/get-started.mdx
@@ -53,8 +53,8 @@ The `@apollo/client` package requires `AsyncIterable` so make sure your tsconfig
 {
   "compilerOptions": {
     // ...
-    "lib": ["es2020", "dom"]
-  }
+    "lib": ["es2020", "dom"],
+  },
 }
 ```
 
