--- a/website/src/pages/v2/recipes/webpack.mdx
+++ b/website/src/pages/v2/recipes/webpack.mdx
@@ -98,14 +98,14 @@ Next, update your TSConfig (`tsconfig.json`):
   // ...
   "files": [
     // ...
-    "src/@types/graphql.d.ts"
+    "src/@types/graphql.d.ts",
   ],
   "compilerOptions": {
     "typeRoots": [
       // ...
-      "src/@types"
-    ]
-  }
+      "src/@types",
+    ],
+  },
 }
 ```
 
