--- a/website/src/pages/v1/basics/setup.mdx
+++ b/website/src/pages/v1/basics/setup.mdx
@@ -57,8 +57,8 @@ The `apollo-client` package requires `AsyncIterable` so make sure your tsconfig.
 {
   "compilerOptions": {
     // ...
-    "lib": ["es2017", "dom", "esnext.asynciterable"]
-  }
+    "lib": ["es2017", "dom", "esnext.asynciterable"],
+  },
 }
 ```
 
