--- a/website/src/pages/docs/performance/server-side-rendering.mdx
+++ b/website/src/pages/docs/performance/server-side-rendering.mdx
@@ -174,6 +174,32 @@ apollo.create({
 });
 ```
 
+## Using Apollo DevTools
+
+The current Apollo client implementation supports a chrome dev tools plugin for troubleshooting
+queries. When using Apollo with SSR in a development environment, the attempts to connect to the
+plugin can cause the server to hang for about 10s.
+
+To avoid this, you can set the `connectToDevTools` option to `false` as below:
+
+```ts
+...
+useFactory(...) {
+  ...
+  return {
+    ....
+    connectToDevTools: false
+  };
+},
+
+// Or when creating the client
+
+apollo.create({
+  ...
+  connectToDevTools: false
+})
+```
+
 ## Best Practices
 
 You saw how to use Server-Side Rendering and Store Rehydration in your application, but you will
