feat: adds watchFragment support

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -8,11 +8,11 @@ description:
 
 ## Write Queries, Not Code
 
-[Apollo Angular](https://nasa.gov/mission_pages/apollo/missions/index.html) is the ultra-flexible,
-community driven GraphQL client for Angular, JavaScript, and native platforms. It is designed from
-the ground up to make it easy to build UI components that fetch data with GraphQL. To get the most
-value out of Apollo Client, you should use it with one of its view layer integrations. To get
-started with the Angular integration, go to [Get Started](./get-started).
+[Apollo Client](https://github.com/apollographql/apollo-client) is a flexible, community driven,
+GraphQL client for JavaScript. It is designed from the ground up to make it easy to build UI
+components that fetch data with GraphQL. To get the most value out of Apollo Client, you should use
+it with one of its view layer integrations. To get started with the Angular integration, go to
+[Get Started](./get-started).
 
 1. **Incrementally adoptable**, so that you can drop it into an existing JavaScript app and start
    using GraphQL for just part of your UI.
