--- a/website/src/pages/docs/development-and-testing/testing.mdx
+++ b/website/src/pages/docs/development-and-testing/testing.mdx
@@ -57,7 +57,7 @@ export class DogComponent implements OnInit {
   error$: Observable<any>;
   dog$: Observable<any>;
 
-  constructor(private apollo: Apollo) {}
+  constructor(private readonly apollo: Apollo) {}
 
   ngOnInit() {
     const source$ = this.getDog();
