--- a/website/src/pages/docs/get-started.mdx
+++ b/website/src/pages/docs/get-started.mdx
@@ -163,7 +163,7 @@ export class ExchangeRates implements OnInit {
   loading = true;
   error: any;
 
-  constructor(private apollo: Apollo) {}
+  constructor(private readonly apollo: Apollo) {}
 
   ngOnInit() {
     this.apollo
