--- a/website/src/pages/docs/local-state/managing-state-with-field-policies.mdx
+++ b/website/src/pages/docs/local-state/managing-state-with-field-policies.mdx
@@ -199,7 +199,7 @@ export const GET_CART_ITEMS = gql`
 export class CartComponent {
   data: Observable<any>;
 
-  constructor(private apollo: Apollo) {
+  constructor(private readonly apollo: Apollo) {
     // Emits a new result when cartItemsVar changes its value
     this.data = this.apollo.watchQuery({
       query: GET_CART_ITEMS,
