--- a/website/src/pages/docs/recipes/authentication.mdx
+++ b/website/src/pages/docs/recipes/authentication.mdx
@@ -170,7 +170,7 @@ const PROFILE_QUERY = gql`
 
 @Injectable()
 class AuthService {
-  constructor(private apollo: Apollo) {}
+  constructor(private readonly apollo: Apollo) {}
   logout() {
     // some app logic
 
